added multi region page

--- a/all/index.html
+++ b/all/index.html
@@ -29,7 +29,7 @@
 <body>
     <iframe
         id="preview-frame"
-        src="https://flespi.io/status"
+        src="https://flespi.io/status/#/region/all"
         frameborder="0"
     >
     </iframe>
