--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
     <img src="images/flespi_logo.svg" class="logo" />
     <div class="status">STATUS</div>
     <div class="menu">
-        Regions:
-        <a href="eu/index.html" class="button">EUROPE</a>
-        <a href="ru/index.html" class="button">RUSSIA</a>
+        <a href="eu/index.html" class="button">EU region</a>
+        <a href="ru/index.html" class="button">RU region</a>
     </div>
 </body>
 
