--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>flespi network status</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/png" id="16x16" sizes="16x16" href="https://flespi.io/statics/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" id="32x32" sizes="32x32" href="https://flespi.io/statics/icons/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" id="32x32x" href="https://flespi.io/statics/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" id="96x96" sizes="96x96" href="https://flespi.io/statics/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" id="128x128" href="https://flespi.io/statics/app-logo-128x128.png">
     <style>
         html, body {
             width: 100%;
