--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <title>flespi network status</title>
     <meta charset="utf-8">
@@ -9,65 +10,34 @@
     <link rel="icon" type="image/png" id="96x96" sizes="96x96" href="https://flespi.io/statics/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" id="128x128" href="https://flespi.io/statics/app-logo-128x128.png">
     <style>
-        html, body {
+        html body {
             width: 100%;
             height: 100%;
             padding: 0px;
             margin: 0px;
             overflow: hidden;
             font-family: arial;
-            font-size: 20px;
-            color: #fff;
+            font-size: 10px;
+            color: #6e6e6e;
             background-color: #455a64;
         }
 
-        .menu {
-            margin: 10px auto 0;
-            width: 350px;
-            max-width: 100%;
-            padding: 20px 10px;
-            border: 1px dashed #6e6e6e;
+        #preview-frame {
+            width: 100%;
+            height: 100%;
             background-color: #455a64;
-            box-sizing: border-box;
-            text-align: center;
-            border-radius: 5px;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px;
-            margin: 2px 5px;
-            background-color: #607d8b!important;
-            text-decoration: none;
-            color: #fff;
-            border-radius: 5px;
-        }
-        .logo {
-            display: block;
-            margin: 20vh auto 0;
-            width: 350px;
-            max-width: 100%;
-            background-color: #455a64;
-        }
-        .status {
-            font-size: 40px;
-            margin: -10px auto 0;
-            width: 350px;
-            max-width: 100%;
-            padding: 5px;
-            text-align: center;
-            color: #fff;
         }
     </style>
 
 </head>
 
 <body>
-    <img src="images/flespi_logo.svg" class="logo" />
-    <div class="status">STATUS</div>
-    <div class="menu">
-        <a href="eu/index.html" class="button">EU region</a>
-        <a href="ru/index.html" class="button">RU region</a>
-    </div>
+    <iframe
+        id="preview-frame"
+        src="https://ru.flespi.io/status"
+        frameborder="0"
+    >
+    </iframe>
 </body>
 
 </html>
