--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <iframe
         id="preview-frame"
-        src="https://ru.flespi.io/status"
+        src="https://flespi.io/status"
         frameborder="0"
     >
     </iframe>
